# predictive-multi-agent-framework

./: .gitignore  LICENSE  README.md
src/bimanual_planning_ros/: CMakeLists.txt  dual_panda_costp_controller_plugin.xml  package.xml
src/bimanual_planning_ros/config/: control_node.yaml  controllers.yaml  dual_panda_costp_controller.yaml  rviz_dual_arms_sim_experiments.rviz  rviz_kobo_sim_experiments.rviz  unit_sphere.stl
src/bimanual_planning_ros/config/robot_description/: hand.xacro  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf  panda_arm.urdf.xacro  panda_arm.xacro
src/bimanual_planning_ros/config/tasks/: dual_arms_dyn1.yaml  dual_arms_dyn2.yaml  dual_arms_dyn3.yaml  dual_arms_static1.yaml  dual_arms_static2.yaml  dual_arms_trap.yaml  sim_kobo_dyn_spheres1.yaml  sim_kobo_dyn_spheres2.yaml  sim_kobo_dyn_spheres3.yaml
src/bimanual_planning_ros/include/bimanual_planning_ros/: cf_agent.h  cf_manager.h  controller_type.h  costp_controller.h  damping_design.h  dual_panda_costp_controller.h  dual_panda_interface.h  eigen_decomposition_op.h  end_condition.h  franka_robot.h  goal_type.h  helper_functions.h  joint_motion_generator.h  moveit_whole_body_avoidance.h  obstacle.h  panda_bimanual_control.h  panda_joint_impedance_controller.h  parameter_manager.h  robot_interface.h  safe_and_fast_publisher.h  trajectory_buffer.h  vision_interface_node.h  vrep_controller.h
src/bimanual_planning_ros/launch/: dry_run.launch  dual_arm_control.launch  move_group.launch  planning_context.launch  planning_moveit_dual_arms.launch  planning_moveit_kobo.launch  planning_node.launch  vrep_interface_dual_arms.launch  vrep_interface_kobo.launch
src/bimanual_planning_ros/msg/: CollisionObjects.msg  ContactWrench.msg  ControllerInfo.msg  ControllerParams.msg  Obstacles.msg  Position.msg
src/bimanual_planning_ros/src/: cf_agent.cpp  cf_manager.cpp  controller_type.cpp  costp_controller.cpp  dual_panda_costp_controller.cpp  dual_panda_interface.cpp  dynamic_obstacle_node.cpp  end_condition.cpp  franka_robot.cpp  goal_type.cpp  helper_functions.cpp  joint_motion_generator.cpp  main.cpp  moveit_whole_body_avoidance.cpp  obstacle.cpp  panda_bimanual_control.cpp  panda_joint_impedance_controller.cpp  parameter_manager.cpp  safe_and_fast_publisher.cpp  trajectory_buffer.cpp  vision_interface_node.cpp  vrep_controller.cpp  vrep_interface.cpp
src/bimanual_planning_ros/srv/: JointMotion.srv
src/bimanual_planning_ros/vrep_scenes/: dual_arms.ttt  kobo.ttt  tray.dae
src/blaise_description/: CMakeLists.txt  README.md  package.xml
src/blaise_description/launch/: visualize.launch
src/blaise_description/meshes/collision/: dual-arm-setup.stl
src/blaise_description/meshes/visual/: base.dae  dual-arm-setup.dae  wheel.dae
src/blaise_description/robots/: blaise.urdf.xacro  blaise_panda_dual.urdf.xacro
src/blaise_description/rviz/: visualize.rviz
src/blaise_description/urdf/: base.xacro  torso.xacro  wheel.xacro
src/franka_sim_description/: CMakeLists.txt  LICENSE  README.md  package.xml
src/franka_sim_description/robots/: hand.xacro  panda_arm.xacro  panda_gazebo.xacro
src/panda_config/: CMakeLists.txt  package.xml
src/panda_config/config/: fake_controllers.yaml  joint_limits.yaml  panda.srdf  panda_arm.urdf.xacro  panda_arm.xacro  ros_controllers.yaml
src/panda_config/launch/: bringup_panda.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  imitate_path.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  rviz.launch  sensor_manager.launch.xml  setup_assistant.launch  test.launch  trajectory_execution.launch.xml  warehouse.launch
src/srdfdom/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
src/srdfdom/include/srdfdom/: model.h  srdf_writer.h
src/srdfdom/scripts/: display_srdf
src/srdfdom/src/: model.cpp  srdf_writer.cpp
src/srdfdom/src/srdfdom/: srdf.py
src/srdfdom/test/: srdf_parser.test  srdf_parser_cpp.test  test.py  test_parser.cpp
src/srdfdom/test/resources/: pr2_desc.3-normalized.srdf  pr2_desc.3.srdf
src/urdf_utils/: CMakeLists.txt  LICENSE  README.md  package.xml
src/urdf_utils/meshes/visual/: item-40x40x520.dae  item-80x160x600.dae  tablet.dae
src/urdf_utils/robots/: box.urdf.xacro  cylinder.urdf.xacro  sphere.urdf.xacro
src/urdf_utils/utils/: gazebo.xacro  inertia.xacro  item.xacro  table.xacro  tablet.xacro  transmissions.xacro
